--- a/frontend-dentbook/package.json
+++ b/frontend-dentbook/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-redux": "^9.0.4",
+    "react-router": "^6.21.0",
+    "react-router-dom": "^6.21.0",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
